--- a/OrderForm.html
+++ b/OrderForm.html
@@ -157,25 +157,25 @@
     const currencyFmt = new Intl.NumberFormat('en-AU', { style: 'currency', currency: 'AUD' });
 
     const skuCatalog = [
-      { group: 'Tines', sku: '108-9168', desc: 'Hardened Tine 1001', price: 21.60 },
-      { group: 'Tines', sku: '108-9245', desc: 'Hardened Tine 1002', price: 18.33 },
-      { group: 'Tines', sku: '108-9213', desc: 'Hardened Tine 1003', price: 19.93 },
-      { group: 'Tines', sku: '108-9236', desc: 'Hardened Tine 1003', price: 15.13 },
-      { group: 'Tines', sku: '108-9214', desc: 'Hardened Tine 1003', price: 20.01 },
-      { group: 'Tines', sku: '100-3621', desc: 'Hardened Tine 1003', price: 13.66 },
-      { group: 'Tines', sku: '137-6529', desc: 'Hardened Tine 1003', price: 26.67 },
-      { group: 'Tines', sku: '108-9261', desc: 'Hardened Tine 1003', price: 22.54 },
-      { group: 'Tines', sku: '108-9184', desc: 'Hardened Tine 1003', price: 52.90 },
-      { group: 'Tines', sku: '104-9875', desc: 'Hardened Tine 1003', price: 16.11 },
-      { group: 'Bedknives', sku: '93-4263', desc: 'Bedknife 2001', price: 106.82 },
-      { group: 'Bedknives', sku: '147-1245', desc: 'Bedknife 2002', price: 131.64 },
-      { group: 'Bedknives', sku: '93-4262', desc: 'Bedknife 2002', price: 86.93 },
-      { group: 'Bedknives', sku: '147-1249', desc: 'Bedknife 2002', price: 173.58 },
-      { group: 'Bedknives', sku: '115-1880', desc: 'Bedknife 2002', price: 195.73 },
-      { group: 'Bedknives', sku: '93-4264', desc: 'Bedknife 2002', price: 91.65 },
-      { group: 'Bedknives', sku: '115-1881', desc: 'Bedknife 2002', price: 195.73 },
-      { group: 'Bedknives', sku: '137-6094', desc: 'Bedknife 2002', price: 91.65 },
-      { group: 'Bedknives', sku: '147-1244', desc: 'Bedknife 2003', price: 195.73 }
+      { group: 'Tines', sku: '108-9168', desc: 'TITAN Side Eject 19mm Mount', price: 21.60 },
+      { group: 'Tines', sku: '108-9245', desc: 'TITAN Solid Round 19mm Mount', price: 18.33 },
+      { group: 'Tines', sku: '108-9213', desc: 'TITAN Solid Round 19mm Mount', price: 19.93 },
+      { group: 'Tines', sku: '108-9236', desc: 'TITAN Solid Round 9.5mm Mount', price: 15.13 },
+      { group: 'Tines', sku: '108-9214', desc: 'TITAN Solid Round 19mm Mount', price: 20.01 },
+      { group: 'Tines', sku: '100-3621', desc: 'Needle Tine', price: 13.66 },
+      { group: 'Tines', sku: '137-6529', desc: 'TITAN Quad 9.5mm Mount', price: 26.67 },
+      { group: 'Tines', sku: '108-9261', desc: 'TITAN Fairway HD 19mm Mount', price: 22.54 },
+      { group: 'Tines', sku: '108-9184', desc: 'TITAN Max Side Eject 19mm Mount', price: 52.90 },
+      { group: 'Tines', sku: '104-9875', desc: 'TITAN Fairway 19mm Mount', price: 16.11 },
+      { group: 'Bedknives', sku: '93-4263', desc: 'Greens Standard HOC Tournament Cut', price: 106.82 },
+      { group: 'Bedknives', sku: '147-1245', desc: 'Fairway High HOC Standard', price: 131.64 },
+      { group: 'Bedknives', sku: '93-4262', desc: 'Greens Low HOC Micro Cut', price: 86.93 },
+      { group: 'Bedknives', sku: '147-1249', desc: 'Fairway High HOC Standard', price: 173.58 },
+      { group: 'Bedknives', sku: '115-1880', desc: 'Greens Low HOC EdgeMax Micro Cut', price: 195.73 },
+      { group: 'Bedknives', sku: '93-4264', desc: 'Greens Off-Greens HOC Low Cut', price: 91.65 },
+      { group: 'Bedknives', sku: '115-1881', desc: 'Greens Standard HOC Edgemax Tournament Cut', price: 195.73 },
+      { group: 'Bedknives', sku: '137-6094', desc: 'Fairway High HOC EdgeMax Fairway Cut', price: 91.65 },
+      { group: 'Bedknives', sku: '147-1244', desc: 'Fairway Low HOC Low Cut', price: 195.73 }
     ];
 
     const GST_RATE = 0.10;
