--- a/OrderForm.html
+++ b/OrderForm.html
@@ -244,7 +244,7 @@
       const accountNo = document.getElementById('accountNo').value.trim();
       const deliveryDate = document.getElementById('deliveryDate').value;
       const out = [];
-      out.push('Promotion Order');
+      out.push('Toro Tines & Bedknives Order');
       out.push('----------------');
       out.push(`Name: ${name}`);
       out.push(`Email: ${email}`);
